# shuttle-cch24

./: Cargo.toml  README.md  Shuttle.toml
src/: day2.rs  day5.rs  day9.rs  main.rs  requested_content_type.rs
src/day12/: grid.rs  mod.rs  team.rs  tile.rs
src/day16/: mod.rs  private.pem  public.pem
src/day19/: cite.rs  draft.rs  list.rs  mod.rs  page.rs  quote.rs  remove.rs  reset.rs  schema.rs  undo.rs
src/day23/: lockfile.rs  mod.rs  ornament_state.rs  present_color.rs
