[package]
name = "shuttlings-cch24"
version = "0.6.0"
edition = "2021"

[dependencies]
cargo-manifest = "0.17.0"
rocket = { version = "0.5.0" }
serde = "1.0.215"
serde_json = "1.0.133"
serde_yaml = "0.9.34"
shuttle-rocket = "0.49.0"
shuttle-runtime = "0.49.0"
leaky-bucket = "1.1.2"
log = "0.4.22"
rand = "0.8.5"
josekit = "0.10.0"
shuttle-shared-db = { version = "0.49.0", features = ["sqlx-native-tls", "postgres"] }
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-native-tls", "chrono", "uuid"] }
uuid = { version = "1.11.0", features = ["std", "v7"] }
chrono = "0.4.39"
html-escape = "0.2.13"
toml = "0.8.19"
